created tables, added client registration and account

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/atm
+spring.datasource.username=postgres
+spring.datasource.password=time
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+
 
