--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/bankomat-db
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=create
+server.port=8082
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
