добавил реквест авторизации, данные для проверки введены вручную

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 
 server.port=8070
 spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/atm-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
